--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Anroid App Downloading Website</title>
-	<link rel="stylesheet" type="text/css" href="document/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+<!--------------------
+   Menu Coding Start
+----------------------->
+     <div class="header_part">
+       <ul>
+       	 <li><a href="#" class="myButton active">Home</a></li>
+         <li><a href="#" class="myButton">About</a></li>
+         <li><a href="#" class="myButton">Contact</a></li>
+         <li><a href="#" class="myButton">Images</a></li>
+         <li><a href="#" class="myButton">Videos</a></li>
+         <li><a href="#" class="myButton">Audio</a></li>
+         <li><a href="#" class="myButton">Apps</a></li>
+       </ul>      	
+     </div>          
+<!--------------------
+    Menu Coding End
+----------------------->
+			
+
 
 <article class="article">
 	<h3>Al Quran </h3>
@@ -16,7 +36,7 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<a href="content/anroidApp/anWriter free.apk" download="App_Downloading_Start" class="Download_button">Download File</a>
+<a href="content/anroidApp/Quran.apk" download="Quran.apk" class="Download_button">Download File</a>
 </article><br><br>
 
 
@@ -28,11 +48,11 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<a href="content/anroidApp/anWriter free.apk" download="App_Downloading_Start" class="Download_button">Download File</a>
+<a href="content/anroidApp/AnWriter free.apk" download="AnWriter free.apk" class="Download_button">Download File</a>
 </article>
 
 <!--<button onclick="ClickMe()">Click</button>-->
 
-<script type="text/javascript" src="./document/script.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
