--- a/document/apps.html
+++ b/document/apps.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Apps Part</title>
     <link rel="stylesheet" type="text/css" href="..\css/style.css">
+       <link rel="stylesheet" type="text/css" href="..\css/document.css">
 </head>
 <body>
 <!--------------------
@@ -24,7 +25,36 @@
 <!--------------------
     Menu Coding End
 ----------------------->	
-<h1>Apps page</h1>
+
+<script type="text/javascript" src="..\js/apps.js"></script>
+<article class="Images_Article">
+   <script>
+      for(var i=0; i<appsDetails.length; i++)
+      {
+        document.write('<table class="Image_Table">');
+         document.write('<tr>');
+            document.write("<td><h1 class='Image_Name'>"+appsDetails[i].appName+"</h1></td>");
+         document.write('</tr>');
+         //document.write('<tr>');
+            //document.write('<td height="416" width="650"><img src="'+appsDetails[i].appPath+'" class="Images" alt="'+appsDetails[i].imageAlt+'"></td>');
+         //document.write('</tr>');
+         document.write('<tr>');
+            document.write('<td><a href="'+appsDetails[i].appPath+'" class="Download_Button" download="true">Download</a></td>');
+         document.write('</tr>');
+         document.write('<tr>');
+            document.write('<td height="125" width="650">');
+            document.write('<p class="Image_Description">'+appsDetails[i].appDescription+'</p>');
+           document.write('</td>');
+           document.write('</tr>');
+         document.write('</table>')
+
+       }
+
+   </script> 
+
+</article>
+
+
 
 <script type="text/javascript" src="../js/document.js"></script>
 </body>
