--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Anroid App Downloading Website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Anroid App Downloading Website</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="..\css/document.css">
 </head>
 <body>
 
@@ -13,23 +14,23 @@
 ----------------------->
      <div class="header_part">
        <ul>
-       	 <li><a href="#" class="myButton active">Home</a></li>
+         <li><a href="#" class="myButton active">Home</a></li>
          <li><a href="#" class="myButton">About</a></li>
          <li><a href="#" class="myButton">Contact</a></li>
          <li><a href="#" class="myButton">Images</a></li>
          <li><a href="#" class="myButton">Videos</a></li>
          <li><a href="#" class="myButton">Audio</a></li>
          <li><a href="#" class="myButton">Apps</a></li>
-       </ul>      	
+       </ul>        
      </div>          
 <!--------------------
     Menu Coding End
 ----------------------->
-			
+            
 
 
 <article class="article">
-	<h3>Al Quran </h3>
+    <h3>Al Quran </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -41,7 +42,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
 <article class="article">
-	<h3>An writter Free </h3>
+    <h3>An writter Free </h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -54,5 +55,6 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <!--<button onclick="ClickMe()">Click</button>-->
 
 <script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
